--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -18,13 +18,20 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+html,
+body {
+  margin: 0;
+  padding: 0;
+  overflow-x: hidden;
+  box-sizing: border-box;
+}
+
 a {
   font-weight: 500;
   text-decoration: inherit;
 }
 
 body {
-  margin: 0;
   display: flex;
   place-items: center;
   min-width: 320px;
